// Vitest Snapshot v1

exports[`LectureDetail > the component is Loading 1`] = `
<DocumentFragment>
  <div
    class="css-1ts3h8o-MuiStack-root"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 css-1h02dxw-MuiTypography-root"
    >
      string
    </h4>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1u0eh3h-MuiPaper-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-css8ik-MuiTypography-root"
      >
        Содержание урока
      </h6>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
      />
      <div
        class="css-b55nah-MuiStack-root"
      >
        <div
          class="css-1sx5dla-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1h8329t-MuiTypography-root"
          >
            1
          </h6>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
          >
            Практика. Пишем первый автотест: Java / Gradle / JUnit5 / Selenide.
          </h6>
        </div>
        <div
          class="css-1sx5dla-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1h8329t-MuiTypography-root"
          >
            2
          </h6>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
          >
            Изучаем готовый проект с инфраструктурой: Github / Jenkins / Allure Report / TestOps / Selenoid / Телеграм-бот.
          </h6>
        </div>
      </div>
    </div>
    <h4
      class="MuiTypography-root MuiTypography-h4 css-1t14ubg-MuiTypography-root"
    >
      Спикеры
    </h4>
    <div
      class="MuiGrid-root MuiGrid-container css-s5hy0i-MuiGrid-root"
    >
      <div
        class="css-mcfb5r-MuiStack-root"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular css-3xou8u-MuiAvatar-root"
        >
          <img
            alt="Remy Sharp"
            class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="/static/images/avatar/1.jpg"
          />
        </div>
        <div
          class="MuiBox-root css-tzqd77"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
          >
            string string
          </h6>
        </div>
      </div>
    </div>
    <h4
      class="MuiTypography-root MuiTypography-h4 css-3svmb6-MuiTypography-root"
    >
      Материалы урока
    </h4>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1u0eh3h-MuiPaper-root"
    >
      <div
        class="css-j722dc-MuiStack-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Запись с занятия
          </h6>
          <div
            class="MuiCardMedia-root css-16cvb1l-MuiCardMedia-root"
            role="img"
            style="background-image: url(hzDWZgPQ8mY);"
          />
          <div
            class="MuiBox-root css-1erchjt"
          >
            <iframe
              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
              allowfullscreen=""
              src="https://www.youtube.com/embed/hzDWZgPQ8mY"
              style="left: 0px; top: 0px; height: 100%; width: 70%; position: absolute;"
              title="Embedded youtube"
            />
          </div>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Запись занятия 14-го потока
          </h6>
          <div
            class="MuiCardMedia-root css-16cvb1l-MuiCardMedia-root"
            role="img"
            style="background-image: url(DlEIccu9wE0);"
          />
          <div
            class="MuiBox-root css-1erchjt"
          >
            <iframe
              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
              allowfullscreen=""
              src="https://www.youtube.com/embed/DlEIccu9wE0"
              style="left: 0px; top: 0px; height: 100%; width: 70%; position: absolute;"
              title="Embedded youtube"
            />
          </div>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Разбор домашнего задания к уроку
          </h6>
          <div
            class="MuiCardMedia-root css-16cvb1l-MuiCardMedia-root"
            role="img"
            style="background-image: url(AWeeoE_US-k);"
          />
          <div
            class="MuiBox-root css-1erchjt"
          >
            <iframe
              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
              allowfullscreen=""
              src="https://www.youtube.com/embed/AWeeoE_US-k"
              style="left: 0px; top: 0px; height: 100%; width: 70%; position: absolute;"
              title="Embedded youtube"
            />
          </div>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Полезные ссылки:
        </h6>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://github.com/qa-guru/demoqa-tests-16/tree/homework"
        >
          Ссылка на репозиторий
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://github.com/qa-guru/getting-started-java/wiki"
        >
          Статья по настройке рабочей среды
        </a>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Selenide:
        </h6>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://selenide.org/documentation.html"
        >
          Документация
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://github.com/selenide/selenide/wiki/Selenide-vs-Selenium"
        >
          Сравнение Selenide с Selenium
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://ru.selenide.org/2016/10/20/selenide-vs-pure-selenium/"
        >
          Еще одна статья про Selenide
        </a>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Git:
        </h6>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://learngitbranching.js.org"
        >
          Интерактивный туториал
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://git-scm.com/book/ru/v2/"
        >
          Лучшая книга про git
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://ru.hexlet.io/courses/intro_to_git"
        >
          Курс: введение в git
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://stepik.org/course/3145/promo"
        >
          Курс: основы git
        </a>
      </div>
    </div>
    <h4
      class="MuiTypography-root MuiTypography-h4 css-1dfolq9-MuiTypography-root"
    >
      Домашнее задание
    </h4>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1u0eh3h-MuiPaper-root"
    >
      <div
        class="css-zgbp5c-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          1. Зарегистрируйте аккаунт github.
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          2. Создайте новый репозиторий для домашнего задания.
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          3. Разработайте один автотест на проверку тестовой формы.
        </h6>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://demoqa.com/automation-practice-form"
        >
          Тестовая форма demoqa.com
        </a>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          В поле ответа необходимо приложить ссылку на репозиторий.
        </h6>
      </div>
    </div>
    <form>
      <h4
        class="MuiTypography-root MuiTypography-h4 css-1dfolq9-MuiTypography-root"
      >
        Ход выполнения
      </h4>
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1q2c5hh-MuiFormControl-root-MuiTextField-root"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-8ewcdo-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <textarea
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
            id=":r0:"
            rows="5"
            style="height: 0px; overflow: hidden;"
          />
          <textarea
            aria-hidden="true"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
            readonly=""
            style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding: 0px; width: 100%;"
            tabindex="-1"
          />
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-ihdtdm"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiLoadingButton-loading MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiLoadingButton-root MuiLoadingButton-loading MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ra7q23-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
          disabled=""
          id=":r1:"
          tabindex="-1"
          type="button"
        >
          <div
            class="MuiLoadingButton-loadingIndicator MuiLoadingButton-loadingIndicatorCenter css-1yt7yx7-MuiLoadingButton-loadingIndicator"
          >
            <span
              aria-labelledby=":r1:"
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorInherit css-62e83j-MuiCircularProgress-root"
              role="progressbar"
              style="width: 16px; height: 16px;"
            >
              <svg
                class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </span>
          </div>
          Отправить
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`LectureDetail > the component is not Loading 1`] = `
<DocumentFragment>
  <div
    class="css-1ts3h8o-MuiStack-root"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 css-1h02dxw-MuiTypography-root"
    >
      string
    </h4>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1u0eh3h-MuiPaper-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-css8ik-MuiTypography-root"
      >
        Содержание урока
      </h6>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
      />
      <div
        class="css-b55nah-MuiStack-root"
      >
        <div
          class="css-1sx5dla-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1h8329t-MuiTypography-root"
          >
            1
          </h6>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
          >
            Практика. Пишем первый автотест: Java / Gradle / JUnit5 / Selenide.
          </h6>
        </div>
        <div
          class="css-1sx5dla-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1h8329t-MuiTypography-root"
          >
            2
          </h6>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
          >
            Изучаем готовый проект с инфраструктурой: Github / Jenkins / Allure Report / TestOps / Selenoid / Телеграм-бот.
          </h6>
        </div>
      </div>
    </div>
    <h4
      class="MuiTypography-root MuiTypography-h4 css-1t14ubg-MuiTypography-root"
    >
      Спикеры
    </h4>
    <div
      class="MuiGrid-root MuiGrid-container css-s5hy0i-MuiGrid-root"
    >
      <div
        class="css-mcfb5r-MuiStack-root"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular css-3xou8u-MuiAvatar-root"
        >
          <img
            alt="Remy Sharp"
            class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="/static/images/avatar/1.jpg"
          />
        </div>
        <div
          class="MuiBox-root css-tzqd77"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
          >
            string string
          </h6>
        </div>
      </div>
    </div>
    <h4
      class="MuiTypography-root MuiTypography-h4 css-3svmb6-MuiTypography-root"
    >
      Материалы урока
    </h4>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1u0eh3h-MuiPaper-root"
    >
      <div
        class="css-j722dc-MuiStack-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Запись с занятия
          </h6>
          <div
            class="MuiCardMedia-root css-16cvb1l-MuiCardMedia-root"
            role="img"
            style="background-image: url(hzDWZgPQ8mY);"
          />
          <div
            class="MuiBox-root css-1erchjt"
          >
            <iframe
              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
              allowfullscreen=""
              src="https://www.youtube.com/embed/hzDWZgPQ8mY"
              style="left: 0px; top: 0px; height: 100%; width: 70%; position: absolute;"
              title="Embedded youtube"
            />
          </div>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Запись занятия 14-го потока
          </h6>
          <div
            class="MuiCardMedia-root css-16cvb1l-MuiCardMedia-root"
            role="img"
            style="background-image: url(DlEIccu9wE0);"
          />
          <div
            class="MuiBox-root css-1erchjt"
          >
            <iframe
              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
              allowfullscreen=""
              src="https://www.youtube.com/embed/DlEIccu9wE0"
              style="left: 0px; top: 0px; height: 100%; width: 70%; position: absolute;"
              title="Embedded youtube"
            />
          </div>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Разбор домашнего задания к уроку
          </h6>
          <div
            class="MuiCardMedia-root css-16cvb1l-MuiCardMedia-root"
            role="img"
            style="background-image: url(AWeeoE_US-k);"
          />
          <div
            class="MuiBox-root css-1erchjt"
          >
            <iframe
              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
              allowfullscreen=""
              src="https://www.youtube.com/embed/AWeeoE_US-k"
              style="left: 0px; top: 0px; height: 100%; width: 70%; position: absolute;"
              title="Embedded youtube"
            />
          </div>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Полезные ссылки:
        </h6>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://github.com/qa-guru/demoqa-tests-16/tree/homework"
        >
          Ссылка на репозиторий
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://github.com/qa-guru/getting-started-java/wiki"
        >
          Статья по настройке рабочей среды
        </a>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Selenide:
        </h6>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://selenide.org/documentation.html"
        >
          Документация
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://github.com/selenide/selenide/wiki/Selenide-vs-Selenium"
        >
          Сравнение Selenide с Selenium
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://ru.selenide.org/2016/10/20/selenide-vs-pure-selenium/"
        >
          Еще одна статья про Selenide
        </a>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Git:
        </h6>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://learngitbranching.js.org"
        >
          Интерактивный туториал
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://git-scm.com/book/ru/v2/"
        >
          Лучшая книга про git
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://ru.hexlet.io/courses/intro_to_git"
        >
          Курс: введение в git
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://stepik.org/course/3145/promo"
        >
          Курс: основы git
        </a>
      </div>
    </div>
    <h4
      class="MuiTypography-root MuiTypography-h4 css-1dfolq9-MuiTypography-root"
    >
      Домашнее задание
    </h4>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1u0eh3h-MuiPaper-root"
    >
      <div
        class="css-zgbp5c-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          1. Зарегистрируйте аккаунт github.
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          2. Создайте новый репозиторий для домашнего задания.
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          3. Разработайте один автотест на проверку тестовой формы.
        </h6>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
          href="https://demoqa.com/automation-practice-form"
        >
          Тестовая форма demoqa.com
        </a>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          В поле ответа необходимо приложить ссылку на репозиторий.
        </h6>
      </div>
    </div>
    <form>
      <h4
        class="MuiTypography-root MuiTypography-h4 css-1dfolq9-MuiTypography-root"
      >
        Ход выполнения
      </h4>
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1q2c5hh-MuiFormControl-root-MuiTextField-root"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-8ewcdo-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <textarea
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
            id=":r2:"
            rows="5"
            style="height: 0px; overflow: hidden;"
          />
          <textarea
            aria-hidden="true"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
            readonly=""
            style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding: 0px; width: 100%;"
            tabindex="-1"
          />
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-ihdtdm"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ra7q23-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
          id=":r3:"
          tabindex="0"
          type="button"
        >
          Отправить
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
